# nexus-ci-examples

./: .gitgnore  Cargo.toml  Jenkinsfile  LICENSE  Podfile  README.md  azure-pipelines.yml  jenkinsstuff  package-lock.json  set-up-cloud.groovy
.github/workflows/: build.yml  maven.yml
WeatherApp/: Constants.swift  ContentView.swift  CustomTextModifier.swift  WeatherApp.swift  WeatherViewModel.swift
WeatherApp.xcodeproj/: project.pbxproj
WeatherApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
WeatherApp.xcodeproj/project.xcworkspace/xcuserdata/camerontownshend.xcuserdatad/: UserInterfaceState.xcuserstate
WeatherApp.xcodeproj/project.xcworkspace/xcuserdata/kannan.xcuserdatad/: UserInterfaceState.xcuserstate
WeatherApp.xcodeproj/xcuserdata/camerontownshend.xcuserdatad/xcschemes/: xcschememanagement.plist
WeatherApp.xcodeproj/xcuserdata/kannan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
WeatherApp.xcworkspace/xcuserdata/camerontownshend.xcuserdatad/: UserInterfaceState.xcuserstate
WeatherAppTests/: WeatherAppTests.swift
WeatherAppUITests/: WeatherAppUITests.swift  WeatherAppUITestsLaunchTests.swift
jenkins-node-auditjs/: Dockerfile
jenkins-node-cmake/: Dockerfile
jenkins-node-composer/: Dockerfile
jenkins-node-gradle/: Dockerfile  README.md
jenkins-node-jake/: Dockerfile  README.md
jenkins-node-maven/: Dockerfile  Dockerfile.bak  README.md  settings.xml  settings.xml.bak
jenkins-node-npm/: Dockerfile
jenkins-node-pip/: Dockerfile  README.md
rust-node/: Dockerfile
src/: main.rs
(+1 files in other folders)
